[package]
name = "fictional_exporter"
version = "0.1.0"
authors = ["Santtu Pajukanta <santtu@pajukanta.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = { version = "^14.3.0", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"